--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
                 <!-- contact list -->
 
                 <div class="col-4 h-100 d-flex flex-column">
-                    <div class="little-header">header</div>
+                    <div class="little-header d-flex align-items-center justify-content-between">
+                        <div><img src="img/avatar_2.jpg" alt="" class="img-user rounded-circle ps-2 "><span>Sofia</span>
+                        </div>
+                        <div><i class="fa-solid fa-circle-notch p-2"></i><i class="fa-solid fa-message p-2"></i><i
+                                class="fa-solid fa-ellipsis-vertical ps-2 pe-3  "></i></div>
+                    </div>
                     <div class="little-main bg-body-tertiary">
 
                         <!-- notification message -->
@@ -55,7 +60,21 @@
                 <!-- chat -->
 
                 <div class="col-8 bg-body-secondary d-flex flex-column ">
-                    <div class="little-header w-100 ">header</div>
+                    <div class="little-header w-100 d-flex align-items-center justify-content-between">
+                        <div class="d-flex align-items-center">
+                            <img src="img/avatar_5.jpg" alt="" class="img-user rounded-circle ps-2 d-block">
+                            <div>
+                                <p>Michele</p>
+                                <p>ultimo accesso alle ore </p>
+                            </div>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <i class="fa-solid fa-paperclip"></i>
+                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                        </div>
+
+                    </div>
                     <div class="little-main bg-body-tertiary w-100 d-flex flex-column justify-content-between">
                         <div class="chat w-100 h-100"></div>
                         <div class="text-input p-2 d-flex justify-content-between align-items-center">
