--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                         <div class="contacts">
                             <div class="contact d-flex align-content-start p-3"
                                 :class="{'active': activeContact === contact.id }" v-for="(contact, index) in contacts"
-                                :class="{}">
-                                <div><img :src="contact.avatar" alt="" class="img-contact rounded-circle"></div>
+                                @click="changeContact(contact.id)">
+                                <div><img :src="contact.avatar" alt="" class="img-contact rounded-circle" ></div>
                                 <div>
                                     <h6>{{contact.name}}</h6><span>ultimo messaggio</span>
                                 </div>
@@ -80,8 +80,8 @@
                     <!-- little main CHAT-->
                     <div class="little-main w-100 d-flex flex-column justify-content-between">
                         <div class="chat w-100 h-100" >
-                            <div v-for="(msg, index) in activeContactChat.messages"  class="msg m-2">
-                                <div :class="msg.status">{{msg.message}}</div>
+                            <div v-for="(msg, index) in activeContactChat.messages" :class="msg.status" class="msg">
+                                <div >{{msg.message}}</div>
                             </div>
                         </div>
                         <div class="text-input p-2 d-flex justify-content-between align-items-center">
