--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 <div>
                                     <h6>{{contact.name}}</h6><span>{{lastMessage(contact.id)}}</span>
                                 </div>
-                                <div class="time ms-auto"></div>
+                                <div class="time ms-auto">{{lastMessageDate(contact.id)}}</div>
                             </div>
                         </div>
 
