--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                         <div class="p-2 find-chat"> <input type="text" class=" w-100 "
-                                placeholder="Cerca o inizia una nuova chat"></div>
+                                placeholder="Cerca o inizia una nuova chat" v-model="searchName"></div>
                         <!-- contacts -->
 
                         <div class="contacts">
