--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src='https://unpkg.com/vue@3/dist/vue.global.js'></script>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@3.4.4/build/global/luxon.min.js"></script>
     <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css' rel='stylesheet'
         integrity='sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH' crossorigin='anonymous'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css'
@@ -42,7 +43,7 @@
                             </div>
                         </div>
                         <div class="p-2 find-chat"> <input type="text" class=" w-100 "
-                                placeholder="Cerca o inizia una nuova chat" v-model="searchName"></div>
+                                placeholder="Cerca o inizia una nuova chat" v-model="searchName" ></div>
                         <!-- contacts -->
 
                         <div class="contacts">
@@ -86,7 +87,7 @@
                         </div>
                         <div class="text-input p-2 d-flex justify-content-between align-items-center">
                             <i class="fa-regular fa-face-smile ps-4 text-center"></i>
-                            <input type="text" class="w-75" v-model="newMessage" @keyup.enter="enterMessage(8)">
+                            <input type="text" class="w-75" v-model="newMessage" @keyup.enter="enterMessage()">
                             <i class="fa-solid fa-microphone pe-4 text-center"></i>
                         </div>
                     </div>
