--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                         <div class="chat w-100 h-100">
                             <div v-for="(msg, index) in activeContactChat.messages">
 
-                                <div :class="msg.status" class="msg">{{msg.message}}
-                                    
+                                <div :class="msg.status" class="msg position-relative">{{msg.message}}
+                                    <p class="delete-message position-absolute" :class="msg.status">message info <br> delete message
+                                    </p> 
                                 </div> 
-                                <p :class="msg.status" class="delete-message ">message info <br> delete message
-                                </p>
+                                
                             </div>
                         </div>
                         <div class="text-input p-2 d-flex justify-content-between align-items-center">
