ul delete option

--- a/index.html
+++ b/index.html
@@ -86,8 +86,11 @@
                             <div v-for="(msg, index) in activeContactChat.messages">
 
                                 <div :class="msg.status" class="msg position-relative" @click="msg.delete = !msg.delete">{{msg.message}}
-                                    <p class="delete-message position-absolute" :class="msg.status" v-if="msg.delete">message info <br> delete message
-                                    </p> 
+                                    <ul class="delete-message position-absolute" :class="msg.status" v-if="msg.delete">
+                                        <li>info message</li>
+                                        <li>delete message</li>
+                                        
+                                    </ul> 
                                 </div> 
                                 
                             </div>
