--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <!-- little main CHAT-->
                     <div class="little-main w-100 d-flex flex-column justify-content-between">
                         <div class="chat w-100 h-100">
-                            <div v-for="(msg, index) in activeContactChat.messages">
+                            <div v-for="(msg, index) in activeContactChat.messages" :key="index">
 
                                 <div :class="msg.status" class="msg position-relative" @click="msg.delete = !msg.delete">{{msg.message}}
                                     <ul class="delete-message position-absolute" :class="msg.status" v-show="msg.delete">
