index of method

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 <div :class="msg.status" class="msg position-relative" @click="msg.delete = !msg.delete">{{msg.message}}
                                     <ul class="delete-message position-absolute" :class="msg.status" v-show="msg.delete">
                                         <li>info message</li>
-                                        <li @click="deleteMsg(index)">delete message</li> 
+                                        <li @click="deleteMsg(msg)">delete message</li> 
                                     </ul> 
                                 </div> 
                                 
