--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <div class="chat w-100 h-100">
                             <div v-for="(msg, index) in activeContactChat.messages" :key="index">
 
-                                <div :class="msg.status" class="msg position-relative" @click="msg.delete = !msg.delete">{{msg.message}}
+                                <div :class="msg.status" class="msg position-relative" @click="msg.delete = !msg.delete" ref="messages">{{msg.message}}
                                     <ul class="delete-message position-absolute" :class="msg.status" v-show="msg.delete">
                                         <li>info message</li>
                                         <li @click="deleteMsg(msg)">delete message</li> 
